--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "9",
     "draft-js": "^0.11.7",
     "postcss": "7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-froala-wysiwyg": "^4.0.9",
     "react-quill": "^1.3.5",
     "react-scripts": "5.0.0",
