--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "9",
     "draft-js": "^0.11.7",
     "postcss": "7",
+    "quill-magic-url": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
